# sts-judge-api

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: checks.yml
api/: models.py  serializers.py  settings.py  urls.py  views.py
internal/: core.py  lang.py
tests/: test_api.py  test_internal.py
